feat: Remove Access permission for categories - MEED-9507 - Meeds-io/MIPs#213 (#5092)
This change will remove the acces permission for categories and suggest
admin to identify roles for edit permission